--- a/assets/Texture/IMGUI/buy.plist
+++ b/assets/Texture/IMGUI/buy.plist
@@ -30,7 +30,7 @@
                 <key>spriteSourceSize</key>
                 <string>{122,68}</string>
                 <key>textureRect</key>
-                <string>{{32,1},{122,64}}</string>
+                <string>{{156,1},{122,64}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -49,6 +49,21 @@
                 <key>textureRotated</key>
                 <false/>
             </dict>
+            <key>restore_btn.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,-1}</string>
+                <key>spriteSize</key>
+                <string>{122,63}</string>
+                <key>spriteSourceSize</key>
+                <string>{122,65}</string>
+                <key>textureRect</key>
+                <string>{{32,1},{122,63}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
             <key>saleicon.png</key>
             <dict>
                 <key>aliases</key>
@@ -60,7 +75,7 @@
                 <key>spriteSourceSize</key>
                 <string>{102,87}</string>
                 <key>textureRect</key>
-                <string>{{156,1},{102,83}}</string>
+                <string>{{280,1},{102,83}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -78,7 +93,7 @@
             <key>size</key>
             <string>{468,404}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:89847d9347c54c78de6737157a68114c:c5e6a6383488a7c9da532a5f44257058:b6e8db9ab518ed74d31a4ca00f2fea4d$</string>
+            <string>$TexturePacker:SmartUpdate:a1af59bce952a8c68d8e504918bd2c18:454173f4cdf4cc324c9229062e97dbce:b6e8db9ab518ed74d31a4ca00f2fea4d$</string>
             <key>textureFileName</key>
             <string>buy.png</string>
         </dict>
